# observatorio_de_emendas

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: foo.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIST_OF_DATASETS.md  MANIFESTO.md
src/: apis.py
src/portal_da_transparencia/: apis.py
src/portal_da_transparencia/apis/: api_interface.py  convenios.py  despesas.py  emendas.py  orgaos.py  pessoas.py
src/portal_da_transparencia/apis/convenios/: convenios_api.py
src/portal_da_transparencia/apis/despesas_publicas/: despesas_api.py
src/portal_da_transparencia/apis/emendas_parlamentares/: emendas_api.py
src/portal_da_transparencia/apis/orgaos/: orgaos_api.py
src/portal_da_transparencia/apis/pessoas/: pessoas_api.py
src/portal_da_transparencia/convenios/: convenios_api.py
src/portal_da_transparencia/convenios/tests/: test_convenios_api.py
src/portal_da_transparencia/despesas_publicas/: despesas_api.py
src/portal_da_transparencia/despesas_publicas/tests/: test_despesas.py
src/portal_da_transparencia/emendas_parlamentares/: emendas_api.py
src/portal_da_transparencia/emendas_parlamentares/tests/: test_emendas_api.py
src/portal_da_transparencia/pessoas/: pessoas_api.py
src/portal_da_transparencia/tests/: test_apis.py  test_contrato_api.py
src/tests/: test_apis.py
src/utils/: writers.py
tests/portal_da_transparencia/: test_writers.py
tests/portal_da_transparencia/apis/: test_api_interface.py  test_convenios.py  test_despesas.py  test_emendas.py  test_orgaos.py  test_pessoas.py
tests/utils/: test_writers.py
(+6 files in other folders)
