[project]
name = "observatorio-de-emendas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.4",
]
